--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello HTML</h1>
     <img src="img" alt="karpaty">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur sequi enim labore quam cumque ipsam ea minima perspiciatis, dicta similique vel fugit maiores amet, aut numquam! Ipsa cum quo neque?</p>
 </body>
 </html>
